css/style.css
/* ... */
@media only screen and (max-width:1024px) {
    #wrapper {
        width: 100%;
        margin: auto;
        padding-top: 0px;
        padding-bottom: 0px;
    }

    header {
        height:75px;
        background-size: 315px, 75px;
    }

    ul li a {
        text-decoration: none;
        color: black;
        font-size: 20px;
        font-weight: bold;
    }

    #aboutMe {
        background-color: rgb(255,245,233);
        margin-right: 0;
        margin-left: 0;
        border-radius: 0px 0px 0px 0px;
        flex-direction: column;
    }

    #abtImg {
        padding: 20px 20px 0px 20px;
    }

    #abtImg img {
        width:150px;
        height:150px;
    }

    #abtText {
        width: 100%;
        padding: 20px;
    }

    #hrLine {
        margin-right: 0;
        margin-left: 0;
    }

    #favorites {
        margin-right: 0;
        margin-left: 0;
        flex-direction: column;
    }

    #favoriteField {
        margin: 0;
        width: 100%;
        border-radius: 0px;
    }
    #favoriteField h2 {
        text-align: center;
    }

   
    #slideshow-container {
        max-width: 100%;
        margin-right: auto;
        margin-left: auto;
        align-items: center;
        display: flex;
        flex-direction: row;
    }

    #slidesCont {
        max-width: 100%;
        margin-right: auto;
        margin-left: auto;
        align-items: center;
        display: flex;
        flex-direction: row;
    }
    #favorites img {
        display: revert;
        max-width: 250px;
        margin-left:20%;
    }
    
    #imgText {
        float: right;
        display: block;
        width:30%;
        margin-right:20%;
        height:250px;
        margin-top:0;
    }


    .prev {
        margin-left:15%;
    }

    .next {
       right:unset;
       margin-left:81%;
    }
    
    .prev, .next {
        top:unset;
        margin-top:unset;
        font-size:30px;
        font-weight:normal;
    }


    #commentSection {
        margin: 0;
        display: flex;
        flex-direction: column;
        align-items: center;
        background-color: rgb(255,245,233);
        padding: 50px;
    }

    #ResumeMain {
        width: 100%;
        margin-left:0;
    }

    #rightBar {
        float: unset;
        width: 100%;
        padding-left: 0;
        display: flex;
        flex-direction: row;
        margin-right:auto;
        margin-left:auto;
    }

    #badgeForGithub {
        float:right;
        width:60%;
    }

    #rightBarPlants {
        float:left;
        width: 100%;
        flex-direction: row;
        align-items: center;
        margin-right: 5%;
        margin-left: 5%;
        display: flex;
    }
    
    #rightBarPlants a {
        font-size: 1.5em;
    }

    #rightBarPlants a:hover {
        font-size: 1.5em;
        color:gold;
    }

    #rightBarPlants span {
        border-radius: 0px 10px 10px 0px;
        padding-top: 10px;
        margin-right:14px;
        margin-left:4px;
        padding-right:4px;
    }

    #plantsMain {
        width:100%;
        float: left;
        margin:0;
        display: flex;
        flex-direction: column;
        padding-right: 20px;
        padding-left: 20px;
        padding-bottom: 50px;
        padding-top: 0px;
    }
}

@media only screen and (max-width:768px) {

    #imgText {
        float: right;
        display: block;
        width: 100%;
        margin-right: 0;
        height: fit-content;
        margin-top: 0;
    }
    #favorites img {
        margin-right: auto;
        margin-left: auto;
        align-items: center;
        display: flex;
        flex-direction: row;
        margin-bottom:20px;
    }

    .prev {
        margin-left: 0
    }

    .next {
        right: 0;
    }

    #allcomments {
        margin-right: auto;
        margin-left: auto;
        align-items: center;
        display: flex;
        width:80%;
    }

    #newComment {
        width: 80%;
    }
    


    #jobTitle {
        font-size: 1.2em;
    }

    #contactInfo{
        float:left;
        padding:0;
    }

    #ResumeMain {
        width: 100%;
        margin:0;
    }

    #resumeHeader {
        padding-left: 10px;
        font-size:1.1em;
    }

    #resumeHeader::first-letter {
        font-size: 1.3em;
    }

    #Psummary {
        padding-top: 10px;
        padding-right: 10px;
        font-size: large;
        font-style: normal;
    }

    #rightBar {
        float: left;
        flex-direction: column;
    }

    #badgeForGithub {
        width: 100%;
    }

    #rightBarPlants #linkText {
        display: none;
    }

    #rightBarPlants a:hover {
        width:100px;
    }

    #plantsBigImg {
        width:143px;
        height:167px;
        margin:5px;
        margin-top:20px;
    }

   

    #plantsMain h1 {
        padding-top: 20px;
        padding-bottom: 10px;
        font-size:1.5em;
    }

    #plantPart1 {
        height: auto;
        padding-top:20px;
    }
}

